# OpenCode-Industrial-Orchestrator

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Codebase_Validation_Report.md  Comprehensive_Architectural_Analysis.md  Deep_Validated_Understanding.md  GEMINI.md  Kubernetes_install.md  MASTER_EXECUTION_PLAN.md  Project_Architecture_Document.md  Project_Review.md  README.md  User_Guide.md  docker-compose.dev.yml  docker-compose.yml  execution-1.md  execution-2.md  execution-3.md  execution-remaining.md  implementation_plan.md  orignal-draft-planning.md  review_docs.md  review_user_guide.md  status.md  status_2.md  status_3.md  status_4.md  status_5.md  status_6.md  status_7.md  status_new.md
dashboard/: Dockerfile  next.config.ts  (+2 more)
orchestrator/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  howto_poetry_install.md  poetry.lock.bak  pyproject.toml  pyproject.toml.bak
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 20240101_000000_initial_industrial_schema.py
orchestrator/src/industrial_orchestrator/application/: context.py
orchestrator/src/industrial_orchestrator/application/dtos/: __init__.py  agent_dtos.py  external_agent_protocol.py  fine_tuning_dtos.py  session_dtos.py  task_dtos.py
orchestrator/src/industrial_orchestrator/application/ports/: __init__.py  repository_ports.py  service_ports.py
orchestrator/src/industrial_orchestrator/application/services/: agent_management_service.py  context_service.py  dataset_curator_service.py  fine_tuning_service.py  session_service.py  task_decomposition_service.py  tenant_service.py
orchestrator/tests/: __init__.py  conftest.py
orchestrator/tests/integration/: test_fine_tuning_pipeline.py
orchestrator/tests/integration/infrastructure/: test_database_integration.py  test_eap_agent_adapter.py  test_redis_integration.py
orchestrator/tests/integration/locking/: test_distributed_lock_integration.py
orchestrator/tests/integration/presentation/: test_external_agents_api.py
orchestrator/tests/integration/repositories/: test_session_repository_integration.py
orchestrator/tests/unit/application/: __init__.py  conftest.py  test_agent_management_service.py  test_context_service.py  test_dataset_curator_service.py  test_fine_tuning_service.py  test_session_service.py  test_session_service_dispatch.py  test_session_service_quota.py  test_task_decomposition_service.py
orchestrator/tests/unit/domain/: test_agent_entity.py  test_context_entity.py  test_session_entity.py  test_task_entity.py
(+147 files in other folders)
